--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "yuichiro/bbs",
     "require": {
 		"cebe/markdown": "~1.1.1",
-		"verot/class.upload.php": "dev-master"
+		"verot/class.upload.php": "dev-master",
+		"robmorgan/phinx": ">=0.9.1"
 	}
 }
